Format gameboard and tiles; fix alignment issues; change grid layout

--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,34 @@
 body {
     display: flex;
-    flex-flow: column wrap;
-    height: 100vh;
+    /* height: 100vh; */
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding: 5% 10%;
 }
 
-.gameBoard {
+.container.gameBoard {
     display: grid;
-    height: 70vh;
+    height: 606px;
+    width: 600px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    /* gap: 2px; */
     text-align: center;
     border: 4px solid purple;
-    /* padding: 4px; */
-    /* margin: 5%; */
+    margin: 0 0 30px 0;
 }
 
-.blankTile {
-    color: black;
+.blankTile.gameBoard {
+    color: red;
     font-size: 42px;
-    /* vertical-align: middle; */
-    /* justify-items: center; */
-    /* align-items: center; */
-    /* text-align: center; */
-    /* align-content: center; */
-    height: 100%;
+    line-height: 200px;
+    height: 200px;
     border: 2px solid violet;
+    margin: -1px;
 }
 
 .buttonPanel {
     display: flex;
     justify-content: space-evenly;
-    margin: 5%;
+    margin: 0 auto;
 }
 
 button {
